# gurubodh

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  package-lock.json  package.json
tools/content-preparation/: .gitignore  README.md  pyproject.toml
tools/content-preparation/config/: chapter_metadata.schema.json  conversion_job.1.2.0.schema.json  conversion_job.schema.json
tools/content-preparation/docs/: MAPPING-STATUS-AND-FUTURE-WORK.md  README-LEGACY-TO-UNICODE-CONVERSION-DOCX.md  README-SEMANTIC-CHUNKING.md
tools/content-preparation/gurubodh_utils/: __init__.py  __main__.py  cli.py  config.py  constants.py  formatting.py  metadata.py  paths.py  progress.py  project.py  retry_formatting.py  run_report.py  storage.py
tools/content-preparation/jobs/: 001_aacharan_shaastra.json  001_aacharan_shaastra.local.json  001_aacharan_shaastra.r2-output.json  001_aacharan_shaastra.r2.json  002_spand_rahasya.formatting-disabled.local.json  002_spand_rahasya.json  002_spand_rahasya.local.json  002_spand_rahasya.r2-output.json  002_spand_rahasya.r2.json
tools/content-preparation/tests/: test_chapter_formatting_artifacts.py  test_formatting.py  test_retry_formatting.py  test_storage_config.py
tools/gurubodh-cli/: README.md  pyproject.toml
tools/gurubodh-cli/config/: chapter_metadata.schema.json  conversion_job.schema.json
tools/gurubodh-cli/docs/: README-LEGACY-TO-UNICODE-CONVERSION-DOCX.md  README-SEMANTIC-CHUNKING.md
tools/gurubodh-cli/gurubodh/: audit.py  (+13 more)
tools/seed-data-cli/: README.md  pyproject.toml
(+253 files in other folders)
