[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gurubodh-utils"
version = "0.1.0"
description = "Gurubodh CMS DOCX processing pipelines"
requires-python = ">=3.9"

[project.scripts]
gurubodh-utils = "gurubodh_utils.cli:main"

[tool.setuptools.packages.find]
include = ["gurubodh_utils*"]
