[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gurubodh_cli"
version = "0.1.0"
description = "Gurubodh CMS DOCX processing pipelines"
requires-python = ">=3.12,<3.13"
dependencies = [
    "boto3>=1.34,<2",
    "numpy>=1.26,<2",
    "sentence-transformers>=3.0,<4",
    "transformers>=4.41,<4.50",
]

[project.scripts]
gurubodh = "gurubodh.cli:main"

[tool.setuptools.packages.find]
include = ["gurubodh*"]
